login and slider

--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -57,7 +57,7 @@
                 <i class="fa-brands fa-square-facebook iconA"></i>
                 <i class="fa-brands fa-square-twitter iconA"></i>
                 <i class="fa-brands fa-square-instagram iconA"></i>
-                <i class="fa-brands fa-linkedin icon iconA"></i>
+                <a href="https://www.linkedin.com/in/swet-trivedi-61603328b000000000000" target="_blank"><i class="fa-brands fa-linkedin icon iconA"></i></a>
             </div>
         </div>
         <div class='row t2'>
@@ -75,24 +75,36 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" href="#">About us</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'usersignup' %}">Signup</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'userlogin' %}">Login</a>
+              </li>
+              {% if request.user.is_authenticated %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'commondashboard' %}">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+              {% endif %}
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dropdown
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">Seller</a></li>
+                  <li><a class="dropdown-item" href="#">Admin</a></li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -102,9 +114,10 @@
           </div>
         </div>
       </nav>
-
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    {% block content %}
+    {% endblock content %}
 </body>
 </html>
