--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -1,3 +1,47 @@
 {% extends 'base.html' %}
 {% load static %}
-hyy
+{% block content %}
+
+<div class="row slider mt-3">
+        <div class="col-sm-4">
+            <img src="{% static 'images/navratri.webp' %}" style="height:245px; border-radius:20px;" id="offer" class="img-fluid w-100"/>
+        </div>
+        <div class="col-sm-8 p-1">
+            <!-- start slider -->
+            <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner">
+
+    <div class="carousel-item active">
+      <img src="{% static 'images/fruits.jpeg' %}" style="max-height:250px;border-radius:20px;" class="d-block w-100" alt="...">
+    </div>
+
+    <div class="carousel-item active">
+      <img src="{% static 'images/footer.jpg' %}" style="max-height:250px;border-radius:20px;" class="d-block w-100" alt="...">
+    </div>
+
+    <div class="carousel-item active">
+      <img src="{% static 'images/Groceries-scaled.jpg' %}" style="max-height:250px;border-radius:20px;" class="d-block w-100" alt="...">
+    </div>
+      {% for i in sdata %}
+    <div class="carousel-item">
+      <img src="/{{i.spic}}" style="max-height:250px;border-radius:20px;" class="d-block w-100" alt="...">
+
+    </div>
+      {% endfor %}
+
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+{% endblock content %}
