--- a/shop/templates/login.html
+++ b/shop/templates/login.html
@@ -1,54 +1,32 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<style>
-    .form-control{
-    height:45px;
-    }
-    #l1{
-    box-shadow:3px 10px 5px 8px #032539;
-    border-right:1px groove white;
-    border-bottom:1px groove white;
-    }
-    #l1:hover{
-    box-shadow:3px 10px 5px 10px #032539;
-    transform:scale(1.1);
-    transform:translateY(15px);
-    transition:all 1s;
-    border-right:3px groove white;
-    border-bottom:3px groove white;
-    }
-    #b1:hover{
-    border:2px solid white;
-    transform:scale(1.1);
-    }
-</style>
-<div class="text-center fs-2">
-    Sign <b class="txt-mycolor">In<i class="fa-solid fa-address-card"></i></b>
+
+<div class="col-sm-5 " style="margin-left:250px;">
+    <h2 class="text-white my-5" ><i>Login Page</i></h2>
+        {% if messages %}
+            {% for message in messages %}
+            <p {% if message.tags %} class="alert alert-{{message.tags}} mb-5" {% endif %}>{{message}}</p>
+            {% endfor %}
+        {% endif %}
+    <form action="" method='POST'>
+        {% csrf_token %} 
+            {% for fm in form %}
+            <div class="form-group">
+                <h4>{{fm.label_tag}}</h4>{{fm}}<br>{{fm.errors|striptags}}
+            </div>
+            {% endfor %}
+            <input type="submit" value="Login" class="btn btn-info"><br>
+            {% comment %} --or--<br> {% endcomment %}
+            {% comment %} <a href="{% url 'social:begin' 'github' %}">login github</a>
+            <a href="{% url 'social:begin' 'google-oauth2' %}">login google</a> {% endcomment %}
+            {% comment %} <a href="{% url 'social:begin' 'github' %}" class="btn btn-dark btn-lg d-block mb-2"> {% endcomment %}
+                {% comment %} <i class="fab fa-github"></i> Login with GitHub {% endcomment %}
+            {% comment %} </a> {% endcomment %}
+            
+            {% comment %} <a href="{% url 'social:begin' 'google-oauth2' %}" class="btn btn-danger btn-lg d-block">
+                <i class="fab fa-google"></i> Login with Google {% endcomment %}
+            {% comment %} </a> {% endcomment %}
+            
 </div>
-<div class="row mx-auto mt-3 px-3"id="l1" style="background:var(--bgcolor);width:700px;height:300px;">
-    <div class="col-sm-6 mx-auto mt-5">
-        <form method="post">
-            {% csrf_token %}
-        <div class="input-group my-3">
-            <i class="input-group-text bg-mycolor text-light" style="width:45px;text-align:center;">
-                <i class="fa-solid fa-user"></i>
-            </i>
-            <input type="text" placeholder="Username" required name="name" class="form-control"/>
-
-        </div>
-            <div class="input-group my-3">
-            <i class="input-group-text bg-mycolor text-light" style="width:45px;text-align:center;">
-              <i class="fa-solid fa-key"></i>
-            </i>
-            <input type="password" placeholder="Enter Your Password" required name="passwd" class="form-control"/>
-
-        </div>
-            <a href="{% url 'home' %}"></a><input type="submit" id="b1" value="LogIn" class="btn bg-mycolor text-light"/>
-            <hr/>
-            <center class="text-light">Don't have an Account?<a href="/signup/">Click Here</a></center>
-        </form>
-    </div>
-</div>
-
-{% endblock %}
+{% endblock content %}
